<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".EmployeeLaoutActicvity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/empID"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText10"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="65dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText18"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText12"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:text="@string/address"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText14"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="62dp"
        android:layout_height="33dp"
        android:text="@string/contactNumber"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText16"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="52dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioButton"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="90dp"
        android:layout_height="22dp"
        android:layout_marginStart="60dp"
        android:text="@string/female"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioButton2"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="101dp"
        android:layout_height="22dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="320dp"
        android:text="@string/male"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="49dp"
        android:layout_height="33dp"
        android:text="@string/dob"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText17"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="55dp"
        android:layout_height="21dp"
        android:text="@string/position"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText19"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="224dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/employeeform"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/empID"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="268dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/contactNumber"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText19"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="404dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/black"
        android:onClick="AddempButton"
        android:text="@string/add"
        android:textColor="@android:color/background_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="456dp"
        android:background="@android:color/black"
        android:onClick="ResetempButton"
        android:text="@string/reset"
        android:textColor="@color/thu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>